--- a/tictoc/TicToc_0/Makefile
+++ b/tictoc/TicToc_0/Makefile
@@ -41,7 +41,8 @@ OBJS = \
     $O/txc5.o \
     $O/txc6.o \
     $O/txc7.o \
-    $O/txc8.o
+    $O/txc8.o \
+    $O/txc9.o
 
 # Message files
 MSGFILES =
